# BiLink

./: .gitignore  README.md  environment.yml  pyproject.toml
data_prepare/OpenAlex/: build_context_tables.py  build_graph_data.py
data_prepare/OpenAlex/author_new_coauthor/: prepare_task_data.py
data_prepare/OpenAlex/author_new_reference/: prepare_task_data.py
joinminer/dataset/: __init__.py  dataset.py
joinminer/dataset/converter/: __init__.py  base.py  bilink.py
joinminer/dataset/loader/: __init__.py  base.py  sequential.py  shuffled.py
joinminer/engine/: __init__.py  checkpoint.py  distributed.py  inference.py  metrics.py  scheduler.py  train.py
joinminer/fileio/: __init__.py  fileio.py
joinminer/fileio/backends/: __init__.py  base.py  hdfs.py  local.py  s3.py
joinminer/graph/: __init__.py  graph.py
joinminer/graph/element/: __init__.py  aggregation_pipeline.py  builder.py  feature_metadata.py  source.py
joinminer/graph/join_edges/: __init__.py  add_path.py  bipath.py  bipath_collect.py  bipath_collect_feat.py  bipath_pair.py  bipath_types.py  inner_join_edge.py  join_edge.py  outer_join_edge.py  pair_bipaths.py  path_feat.py  prepare_collect.py  unique_edge_join.py
joinminer/model/: __init__.py  bipathsnn.py  feat_proj.py  mlp.py  pos_embed.py  tokens_encoder.py
joinminer/spark/: __init__.py  spark_runner.py
joinminer/spark/io/: __init__.py  cleanup.py  partition.py  read.py  show.py  size_estimator.py  write.py
joinminer/spark/managers/: __init__.py  (+2 more)
joinminer/utils/: __init__.py  array.py  date.py  decorator.py  logger.py  metrics.py
(+24 files in other folders)
